feat: 食べ物メニューのスタイルを実装

--- a/pages/style.css
+++ b/pages/style.css
@@ -23,3 +23,29 @@ footer {
   color: white;
   height: 150px;
 }
+#food {
+  width: 100%;
+}
+
+#food > h3 {
+  width: 50vw;
+  margin: 0 5vw 25px auto;
+  text-align: center;
+}
+
+#food-list > table {
+  width: 35%;
+  margin-right: 5%;
+  margin-left: 10%;
+}
+
+#food-image {
+  height: 45vh;
+  width: 40%;
+  text-align: center;
+}
+
+#food-image > img {
+  height: 100%;
+  border-radius: 50%;
+}
